--- a/vqvae.ipynb
+++ b/vqvae.ipynb
@@ -36,8 +36,8 @@
     "Technically, this is pretty similar to applying K-means to the latent space, with the centroid being the \"codewords\"; we then simply round the codewords to the nearest centroid.<br/>\n",
     "The paper recommends using EMA to update the codebook (=move each codeword a bit towards the average of the elements that fall into that codeword)<br/>\n",
     "<br/>\n",
-    "<font color=\"red\"><b>WARNING:</b></font> The results here are not great! VQVAE performs pretty bad on small images (CIFAR) with a compression rate of turning a 4-by-4 block into ONE token.<br/>\n",
-    "For larger images, results look okay-ish (=less structure gets mashed up). This is just a demonstration! Toy around, throw one downscaling out (=do 16-by-16), use more codewords, etc., to make things look better!<br/>\n",
+    "<font color=\"red\"><b>WARNING:</b></font> The results here are a bit blurry! VQVAE performs pretty bad on small images (CIFAR) when going from 32-by-32 to 8-by-8, i.e. with a compression rate of turning a 4-by-4 block into ONE token.<br/>\n",
+    "For larger images, results look okay-ish (=less structure gets mashed together; if we have 256p images of a fish, then the scales don't have to look crisp for the image to be crisp when using a factor of four like here). This is just a demonstration! Toy around, throw one downscaling out (=do 16-by-16), use more codewords, etc., to make things look better!<br/>\n",
     "<br/>\n",
     "Applications for this include e.g. autoregressive probabilistic generation. We can also sharpen a VQ-VAE with an additional discriminator (\"VQGAN\"), i.e. reconstructing lost details by \"imagining\" something new. Works particularly great in high resolution images (not so much on e.g. CIFAR), as there are a lot of details that are not important; on CIFAR, every single pixel is needed for structure anyway; but e.g. on high-res images of fishes, VQGAN is great at learning e.g. the patterns of their scales instead of just outputting some \"averaged\" colour for the area<br/>\n",
     "<br/>\n",
@@ -75,11 +75,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q_DIMS = 64 #number of dimensions in quantised space, i.e. the number of dimensions in which we cluster (round in [b x Q_DIMS x W X H] in dimension 1 to the nearest centroid (i.e. codeword))\n",
-    "# rule of thumb: Q_DIMS should be at least such that CODEWORDS <= 2**Q_DIMS to ensure that the quantised space is large enough to capture the variance in the data;\n",
-    "# trivial example: if we use Q_DIMS = 1, then we can only cluster the data in one dimension, which doesn't work that well as networks are good at doing binary decisions, but not good at doing decisions with 512 different options\n",
+    "VQVAE_D = 64 #number of dimensions in quantised space, i.e. the number of dimensions in which we cluster (round in [b x VQVAE_D x W X H] in dimension 1 to the nearest centroid (i.e. codeword))\n",
+    "# rule of thumb: VQVAE_D should be at least such that CODEWORDS <= 2**VQVAE_D to ensure that the quantised space is large enough to capture the variance in the data;\n",
+    "# trivial example: if we use VQVAE_D = 1, then we can only cluster the data in one dimension, which doesn't work that well as networks are good at doing binary decisions, but not good at doing decisions with 512 different options\n",
     "# if we use e.g. 4 dimensions, then we can do 4 binary decisions with our relus, hence we have 16 different options - better than 1, but still not enough for 512 different options (=CODEWORDS)\n",
-    "CODEWORDS = 512 #number of codewords in the codebook, i.e. the number of centroids in the quantised space"
+    "VQVAE_K = 512 #number of codewords in the codebook, i.e. the number of centroids in the quantised space"
    ]
   },
   {
@@ -97,27 +97,27 @@
     "        self.relu = torch.nn.LeakyReLU() #we use leaky relu as activation function, as it also has a gradient for an input < 0\n",
     "        self.reduce = torch.nn.AvgPool2d(kernel_size=2, stride=2, padding=0)\n",
     "\n",
-    "        self.conv_res = torch.nn.Conv2d(in_channels=c_in, out_channels=Q_DIMS, kernel_size=1, stride=1, padding=0, bias=False)\n",
+    "        self.conv_res = torch.nn.Conv2d(in_channels=c_in, out_channels=VQVAE_D, kernel_size=1, stride=1, padding=0, bias=False)\n",
     "\n",
     "        #super basic encoder (convolution -> relu -> pooling -> repeat), to improve: replace conv2d with a full residual block and add some normalisation\n",
     "        #we don't use strided convolution to reduce the spatial dimensions, but instead use pooling, as this usually avoids checkerboard artefacts: https://distill.pub/2016/deconv-checkerboard/\n",
     "        self.encoder = nn.Sequential()\n",
     "        self.encoder.append(torch.nn.Conv2d(in_channels=c_in, out_channels=CHANNELS, kernel_size=3, stride=1, padding=1))\n",
     "        self.encoder.append(self.relu)\n",
-    "        ###self.encoder.append(self.reduce) <-- disabled, because 8-by-8 is a bit much compression for images that are super small already\n",
+    "        self.encoder.append(self.reduce)\n",
     "        self.encoder.append(torch.nn.Conv2d(in_channels=CHANNELS, out_channels=CHANNELS, kernel_size=3, stride=1, padding=1))\n",
     "        self.encoder.append(self.relu)\n",
     "        self.encoder.append(self.reduce)\n",
-    "        self.encoder.append(torch.nn.Conv2d(in_channels=CHANNELS, out_channels=Q_DIMS, kernel_size=3, stride=1, padding=1))\n",
+    "        self.encoder.append(torch.nn.Conv2d(in_channels=CHANNELS, out_channels=VQVAE_D, kernel_size=3, stride=1, padding=1))\n",
     "        \n",
     "        #same for the decoder, but with upsampling instead of pooling. same as above, no transposed convolutions, but upsampling, as this usually avoids checkerboard artefacts\n",
     "        self.decoder = nn.Sequential()\n",
-    "        self.decoder.append(torch.nn.Conv2d(in_channels=Q_DIMS, out_channels=CHANNELS, kernel_size=3, stride=1, padding=1))\n",
+    "        self.decoder.append(torch.nn.Conv2d(in_channels=VQVAE_D, out_channels=CHANNELS, kernel_size=3, stride=1, padding=1))\n",
     "        self.decoder.append(self.relu)\n",
     "        self.decoder.append(torch.nn.Upsample(scale_factor=2, mode='bilinear'))\n",
     "        self.decoder.append(torch.nn.Conv2d(in_channels=CHANNELS, out_channels=CHANNELS, kernel_size=3, stride=1, padding=1))\n",
     "        self.decoder.append(self.relu)\n",
-    "        ###self.decoder.append(torch.nn.Upsample(scale_factor=2, mode='bilinear')) <-- disabled, because 8-by-8 is a bit much compression for images that are super small already\n",
+    "        self.decoder.append(torch.nn.Upsample(scale_factor=2, mode='bilinear'))\n",
     "        self.decoder.append(torch.nn.Conv2d(in_channels=CHANNELS, out_channels=c_in, kernel_size=3, stride=1, padding=1))\n",
     "        self.decoder.append(self.relu) #we have [0, 1] for our data (not [-1, 1]), so we CAN use a relu; if we'd normalise data, this would kill of negative values (which we don't have)\n",
     "\n",
@@ -125,20 +125,20 @@
     "        #little trick to get better initialisation:\n",
     "        #   if we get values far away from any encoder outputs by chance, we have no gradient to these codewords\n",
     "        #   hence, rather set the codewords a bit \"closer\" around the centre, so we have a gradient for all codewords \n",
-    "        self.codebook = torch.nn.Parameter((torch.rand(CODEWORDS, Q_DIMS) * 2.0 - 1.0) * 0.5, requires_grad=True)\n",
+    "        self.codebook = torch.nn.Parameter((torch.rand(VQVAE_K, VQVAE_D) * 2.0 - 1.0) * 0.5, requires_grad=True)\n",
     "\n",
     "    def quantise(self, x):\n",
     "        #this is where the magic happens:\n",
-    "        #    1. take input of size [b x W x H x Q_DIMS] and reshape to [b x W x H x Q_DIMS];\n",
+    "        #    1. take input of size [b x W x H x VQVAE_D] and reshape to [b x W x H x VQVAE_D];\n",
     "        #       this means we have ALL the codewords in the last dimension now, so we can just merge together all other dimensions to easily compare them to the codewords\n",
     "        x = x.permute(0, 2, 3, 1).contiguous()\n",
     "        size_in = x.size()\n",
-    "        x = x.view(-1, Q_DIMS)\n",
-    "        #   2. compare [b*W*H x Q_DIMS] to [CODEWORDS x Q_DIMS]: by re-shaping to have [b*W*H x 1 x Q_DIMS] and [1 x CODEWORDS x Q_DIMS], the substraction will\n",
-    "        #      give us a [b*W*H x CODEWORDS X Q_DIMS] tensor of all distance pairs between input elements (b*W*H) and the CODEWORDS-many codewords; just square, \n",
+    "        x = x.view(-1, VQVAE_D)\n",
+    "        #   2. compare [b*W*H x VQVAE_D] to [CODEWORDS x VQVAE_D]: by re-shaping to have [b*W*H x 1 x VQVAE_D] and [1 x CODEWORDS x VQVAE_D], the substraction will\n",
+    "        #      give us a [b*W*H x CODEWORDS X VQVAE_D] tensor of all distance pairs between input elements (b*W*H) and the CODEWORDS-many codewords; just square, \n",
     "        #      then sum up the last dimension to get sum of the distance values for each dimension (=euclidean squared distance)\n",
     "        #      and then take the argmin to get the index of the closest codeword for each input element - these are our indices we want!\n",
-    "        indices = (x[:,None] - self.codebook.view(1, CODEWORDS, Q_DIMS)).square().sum(dim=2).argmin(dim=1)\n",
+    "        indices = (x[:,None] - self.codebook.view(1, VQVAE_K, VQVAE_D)).square().sum(dim=2).argmin(dim=1)\n",
     "        #   3. we take those indices we just looked up: these are the indices of the closest codeword for each input element, so we can now look up the actual \n",
     "        #      codeword to find the closest codeword to each input element aka the \"centroids\" we round to\n",
     "        x_rounded = self.codebook[indices]\n",
@@ -165,7 +165,7 @@
     "    def forward(self, x):\n",
     "        #encode, then quantise, then decode; pass the codebook loss and commitment loss through so we can use them for training\n",
     "        w, h = x.size()[2], x.size()[3]\n",
-    "        x_res = self.conv_res(self.reduce(x)) #simple residual connection; makes optimisation more stable\n",
+    "        x_res = self.conv_res(self.reduce(self.reduce(x))) #simple residual connection; makes optimisation more stable\n",
     "        x = self.encoder(x)\n",
     "        x = x + x_res\n",
     "        x, loss_codebook, loss_commitment, indices = self.quantise(x)\n",
@@ -205,6 +205,8 @@
     "    #also run the test set through the network\n",
     "    avg_losses = [0, 0, 0]\n",
     "    step = 0\n",
+    "    #track unique indices:\n",
+    "    unique_indices = set()\n",
     "    for data, labels in testloader:\n",
     "        data = data.to(DEVICE)\n",
     "        outputs, loss_codebook, loss_commitment, indices = net(data)\n",
@@ -216,19 +218,15 @@
     "        #show the first item from the testset\n",
     "        if step == 0:\n",
     "            #count unique indices:\n",
-    "            print(\"\\tThis test batch has \", len(torch.unique(indices)), \" unique indices\")\n",
+    "            unique_indices.update(torch.unique(indices).tolist())\n",
+    "            #make sure unique indices stay unique\n",
+    "            unique_indices = set(unique_indices)\n",
     "            imshow(torchvision.utils.make_grid(data.cpu()))\n",
     "            imshow(torchvision.utils.make_grid(outputs.cpu().detach()))\n",
     "            step += 1\n",
+    "    print(\"\\tThe test set has seen \", len(unique_indices), \"/\",VQVAE_K,\" unique indices\") #should be somewhat close to VQVAE_K; else use some techniques to either re-initialise the codebook or regularise the encoder distribution\n",
     "    print(\"\\tTest loss: rec=\", avg_losses[0] / len(testloader),\", code=\", avg_losses[1] / len(trainloader),\", comm=\", avg_losses[2] / len(trainloader))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
