--- a/stableGAN.ipynb
+++ b/stableGAN.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h1>GAN</h1>\n",
+    "Simple (conditional) GAN, with modern generator/discriminator, built to produce MNIST characters.<br/>",
+    "This version uses a more modern hinge-loss: don't train the discriminator/generator too much when they're already ahead, makes everything more stable;<br/>\n",
+    "Also uses a more modern convolution architecture. Should output decent generations after 3 epochs.<br/>\n",
+    "<br/>\n",
+    "Literature I recommend:<br/>\n",
+    "1. Original Paper: https://arxiv.org/abs/1406.2661<br/>\n",
+    "2. BigGAN, includes the techniques to create a nice and stable GAN: https://arxiv.org/abs/1809.11096<br/>\n",
+    "3. Wasserstein GAN, regularising the discriminator gradient such that it always outputs something useful and we no longer have vanishing gradient: https://arxiv.org/abs/1701.07875<br/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2>1. Imports</h1>"
    ]
   },
