--- a/WGAN-GP.ipynb
+++ b/WGAN-GP.ipynb
@@ -184,7 +184,7 @@
     "        x = self.res_3(x)\n",
     "        # now at [b x 16 x 7 x 7]\n",
     "        x = x.view(x.size()[0], 16*7*7)\n",
-    "        #second part: process the image with linear layers; could also skip this part, giving us basically a patch-wise discriminator as done by many papers!\n",
+    "        #second part: process the image with linear layers; could also skip this part, giving us basically a patch-wise critic as done by many papers!\n",
     "        x = self.relu(self.lin_1(x))\n",
     "        x = self.relu(self.lin_2(x))\n",
     "        x = self.lin_3(x) #no activation at the end - then we can get values in [-inf, inf]\n",
@@ -210,7 +210,7 @@
       "The generator has  301979  parameters\n",
       "The critic has  245281  parameters\n",
       "*** DONE WITH EPOCH 0  ***\n",
-      "\tAVG loss discriminator:  -250.41908834397793\n",
+      "\tAVG loss critic:  -250.41908834397793\n",
       "\tAVG loss generator    :  69.34565829277038\n"
      ]
     },
@@ -229,7 +229,7 @@
      "output_type": "stream",
      "text": [
       "*** DONE WITH EPOCH 1  ***\n",
-      "\tAVG loss discriminator:  -104.84078308105468\n",
+      "\tAVG loss critic:  -104.84078308105468\n",
       "\tAVG loss generator    :  41.25334396034479\n"
      ]
     },
@@ -248,7 +248,7 @@
      "output_type": "stream",
      "text": [
       "*** DONE WITH EPOCH 2  ***\n",
-      "\tAVG loss discriminator:  -80.64828649520874\n",
+      "\tAVG loss critic:  -80.64828649520874\n",
       "\tAVG loss generator    :  27.965353236198425\n"
      ]
     },
@@ -267,7 +267,7 @@
      "output_type": "stream",
      "text": [
       "*** DONE WITH EPOCH 3  ***\n",
-      "\tAVG loss discriminator:  -67.98462286949157\n",
+      "\tAVG loss critic:  -67.98462286949157\n",
       "\tAVG loss generator    :  -10.826188431978226\n"
      ]
     },
@@ -286,7 +286,7 @@
      "output_type": "stream",
      "text": [
       "*** DONE WITH EPOCH 4  ***\n",
-      "\tAVG loss discriminator:  -58.00048375606537\n",
+      "\tAVG loss critic:  -58.00048375606537\n",
       "\tAVG loss generator    :  -39.01928319633007\n"
      ]
     },
@@ -305,7 +305,7 @@
      "output_type": "stream",
      "text": [
       "*** DONE WITH EPOCH 5  ***\n",
-      "\tAVG loss discriminator:  -57.121942439079284\n",
+      "\tAVG loss critic:  -57.121942439079284\n",
       "\tAVG loss generator    :  -26.205917151868345\n"
      ]
     },
@@ -324,7 +324,7 @@
      "output_type": "stream",
      "text": [
       "*** DONE WITH EPOCH 6  ***\n",
-      "\tAVG loss discriminator:  -55.71987921237945\n",
+      "\tAVG loss critic:  -55.71987921237945\n",
       "\tAVG loss generator    :  -26.530335417687894\n"
      ]
     },
@@ -343,7 +343,7 @@
      "output_type": "stream",
      "text": [
       "*** DONE WITH EPOCH 7  ***\n",
-      "\tAVG loss discriminator:  -54.742265167236326\n",
+      "\tAVG loss critic:  -54.742265167236326\n",
       "\tAVG loss generator    :  10.664556652009487\n"
      ]
     },
@@ -362,7 +362,7 @@
      "output_type": "stream",
      "text": [
       "*** DONE WITH EPOCH 8  ***\n",
-      "\tAVG loss discriminator:  -51.240360903739926\n",
+      "\tAVG loss critic:  -51.240360903739926\n",
       "\tAVG loss generator    :  -0.38028638273477555\n"
      ]
     },
@@ -441,7 +441,7 @@
     "            generator.train(False)\n",
     "            critic_opt.zero_grad()\n",
     "            #detach the generator output, so we do not backpropagate through the generator - \n",
-    "            #we want to train the discriminator to distinguish between real and fake images, not to find some loopwhole in the generator\n",
+    "            #we want to train the critic to distinguish between real and fake images, not to find some loopwhole in the generator\n",
     "            fake = generator(noise).detach() \n",
     "            out_real = critic(real).mean()\n",
     "            out_fake = critic(fake).mean()\n",
@@ -468,7 +468,7 @@
     "\n",
     "            fake = generator(noise)\n",
     "            out_fake = critic(fake).mean()\n",
-    "            #train the generator to \"fool\" the discriminator: output should be judged to be as high as possible (=critic says real)\n",
+    "            #train the generator to \"fool\" the critic: output should be judged to be as high as possible (=critic says real)\n",
     "            #NEW#\n",
     "            loss = -out_fake\n",
     "            loss_gen += loss.item()\n",
@@ -480,8 +480,8 @@
     "            break\n",
     "\n",
     "    print('*** DONE WITH EPOCH',epoch,' ***')\n",
-    "    #as discriminator output is unbounded and only guided by the regularisation of the gradient penalty, we can't really interpret the loss values here!!!\n",
-    "    print(\"\\tAVG loss discriminator: \", loss_disc/step)\n",
+    "    #as critic output is unbounded and only guided by the regularisation of the gradient penalty, we can't really interpret the loss values here!!!\n",
+    "    print(\"\\tAVG loss critic: \", loss_disc/step)\n",
     "    print(\"\\tAVG loss generator    : \", loss_gen /step)\n",
     "    #show some example images\n",
     "    with torch.no_grad():\n",
