--- a/MNIST_AutoregressiveImageTransformer.ipynb
+++ b/MNIST_AutoregressiveImageTransformer.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "Literature I recommend:<br/>\n",
     "1. The Transformer Paper, Vaswani et al.: https://arxiv.org/abs/1706.03762 (difficult read)<br/>\n",
-    "(Alternative, that's a bit more understandable: https://jalammar.github.io/illustrated-transformer/ - note that this explains a full transformer, we need only the encoder part)<br/>\n",
+    "(Alternative, that's a bit more understandable: https://jalammar.github.io/illustrated-transformer/ - note that this explains a full transformer, we need only the decoder part)<br/>\n",
     "2. Taming Transformers for High-Resolution Image Synthesis (VQGAN): https://arxiv.org/abs/2012.09841"
    ]
   },
@@ -31,7 +31,7 @@
     "<h1>What this code does:</h1>\n",
     "Basically, we just take an input image (here: 12-by-12 greyscale images of MNIST, i.e. handwritten digits), then makes a linear sequence of so called \"tokens\" out of them (values 0 to 255).<br/>\n",
     "This linear sequence is then altered by a positional encoding, i.e. an annotation that says \"this token is at position x=3, y=10\".<br/>\n",
-    "Then, we throw these tokens into an autoregressive <b>encoder only</b> transformer. Encoder only here means: We only produce one sequence, instead of doing sequence-to-sequence translation (Example: We give the transformer an english sentence and then, autoregressively, produce token by token the translated sentence - this is what a full transformer does). In our case, we do <b>not</b> have a fully given sequence at the start, we want to generate one out of thin air (=autoregressive generation), hence we only take the \"transformer encoder\"(terminology is a bit weird here).<br/><br/>\n",
+    "Then, we throw these tokens into an autoregressive <b>decoder only</b> transformer. Decoder only here means: We only produce one sequence, instead of doing sequence-to-sequence translation (Example: We give the transformer an english sentence and then, autoregressively, produce token by token the translated sentence - this is what a full transformer does). In our case, we do <b>not</b> have a fully given sequence at the start, we want to generate one out of thin air (=autoregressive generation), hence we only take the \"transformer decoder\"(terminology is a bit weird here).<br/><br/>\n",
     "What the transformer itself does, is basically saying: We compare each input token to each other input token that we have, and compute pairwise scores for them (\"attention\"). Then, we produce a tokens from that for every input token by linearly combining the tokens according to these scores, producing the same number of tokens.<br/>\n",
     "At the end, there is an additional \"classification head\" that takes the output, then makes a prediction (=gives token-many values) that we can use to guess what the next token should be. Transformers also do a trick (masking attention scores) to make this really fast, by not only inputting a certain sequence length of k, then predicting the k+1th item, but instead predicting all possible sequence lengths at once.<br/><br/>\n",
     "By starting with an empty sequence, then predicting the first token, then predicting the second token, then the ... until we have n tokens, we can generate new content."
@@ -224,15 +224,15 @@
     }
    ],
    "source": [
-    "#this is the transformer model, which has the TransformerEncoder at it's core\n",
+    "#this is the transformer model, which has the TransformerDecoder at it's core\n",
     "#it also does a little other stuff, like embedding the tokens and adding the positional encoding, and applying a linear layer at the end to get the classification output\n",
-    "class TransformerEncoderModel(nn.Module):\n",
+    "class TransformerDecoderModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "\n",
-    "        #the encoder-only transformer, the is built out of NUM_LAYER-many encoder layers\n",
-    "        self.encoder_layer = nn.TransformerEncoderLayer(d_model=DIMENSIONS, nhead=NUM_HEADS, batch_first=True)\n",
-    "        self.transformer = torch.nn.TransformerEncoder(self.encoder_layer, num_layers=NUM_LAYERS)\n",
+    "        #the decoder-only transformer, the is built out of NUM_LAYER-many decoder layers\n",
+    "        self.decoder_layer = nn.TransformerDecoderLayer(d_model=DIMENSIONS, nhead=NUM_HEADS, batch_first=True)\n",
+    "        self.transformer = torch.nn.TransformerDecoder(self.decoder_layer, num_layers=NUM_LAYERS)\n",
     "\n",
     "        #train an embedding of the tokens along with the model: encoding greyscale scalar values directly is always harder to learn for a NN than some higher dimensional embedding\n",
     "        self.embedding = nn.Embedding(NUM_TOKENS+2, DIMENSIONS) #we have our greyscale values PLUS the start/end token\n",
@@ -275,12 +275,12 @@
     "        return self.linear(self.transformer(tokens, self.get_target_mask(squence_length=tokens.size()[1]).to(tokens.device), is_causal=True))\n",
     "\n",
     "#create the model & test to throw some stuff in there\n",
-    "transformer_encoder = TransformerEncoderModel()\n",
-    "print(\"Transformer has \", sum(p.numel() for p in transformer_encoder.parameters()), \" parameters.\")\n",
+    "transformer_decoder = TransformerDecoderModel()\n",
+    "print(\"Transformer has \", sum(p.numel() for p in transformer_decoder.parameters()), \" parameters.\")\n",
     "input = torch.randint(0, 256, (BATCH_SIZE, WIDTH*HEIGHT+2))\n",
     "input[:,0] = SOS_token\n",
     "input[:,-1] = EOS_token\n",
-    "output = transformer_encoder(input)"
+    "output = transformer_decoder(input)"
    ]
   },
   {
@@ -331,7 +331,7 @@
     "        sampled[:,0] = SOS_token.item()\n",
     "        \n",
     "        while sampled.size()[1] < WIDTH*HEIGHT+2:\n",
-    "            predicted = sample(transformer_encoder.predict(sampled), strategy)\n",
+    "            predicted = sample(transformer_decoder.predict(sampled), strategy)\n",
     "            \n",
     "            sampled = torch.cat([sampled, predicted], 1)\n",
     "        sampled = sampled[:,1:-1].view(sampled.size()[0], 1, WIDTH, HEIGHT)\n",
@@ -401,7 +401,7 @@
      "output_type": "stream",
      "text": [
       "  0%|          | 0/157 [00:00<?, ?it/s]C:\\Users\\Jack_\\AppData\\Roaming\\Python\\Python310\\site-packages\\torch\\nn\\modules\\transformer.py:544: UserWarning: Converting mask without torch.bool dtype to bool; this will negatively affect performance. Prefer to use a boolean mask directly. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\attention.cpp:152.)\n",
-      "  return torch._transformer_encoder_layer_fwd(\n",
+      "  return torch._transformer_decoder_layer_fwd(\n",
       "100%|██████████| 157/157 [00:03<00:00, 45.85it/s]\n"
      ]
     },
@@ -827,13 +827,13 @@
    "source": [
     "from tqdm import tqdm\n",
     "\n",
-    "transformer_encoder = TransformerEncoderModel().to(DEVICE)\n",
-    "print(\"Transformer has \", sum(p.numel() for p in transformer_encoder.parameters()), \" parameters.\")\n",
-    "optimiser = torch.optim.AdamW(transformer_encoder.parameters(), lr=0.0001) #use AdamW because it is a good default choice\n",
+    "transformer_decoder = TransformerDecoderModel().to(DEVICE)\n",
+    "print(\"Transformer has \", sum(p.numel() for p in transformer_decoder.parameters()), \" parameters.\")\n",
+    "optimiser = torch.optim.AdamW(transformer_decoder.parameters(), lr=0.0001) #use AdamW because it is a good default choice\n",
     "\n",
     "loss_function = torch.nn.BCEWithLogitsLoss(reduce='none')\n",
     "for epoch in range(0, 1000):\n",
-    "    transformer_encoder.train()\n",
+    "    transformer_decoder.train()\n",
     "\n",
     "    total_loss = 0\n",
     "    print(\"\\t\\ttraining...\")\n",
@@ -844,7 +844,7 @@
     "        #predict the next token for the whole sequence\n",
     "        #i.e. for an input of [b x s] many tokens, we get [b x s x num_tokens] many logits (for each sub-sequence, the probability distribution over the tokens),\n",
     "        #i.e. we predict the next token for [SOS], for [SOS, 0], for [SOS, 0, 255], etc.\n",
-    "        output = transformer_encoder(input)\n",
+    "        output = transformer_decoder(input)\n",
     "        #turn our target (=our input) that is currently a [b x s] many tokens into a one-hot encoded tensor of shape [b x s x num_tokens]\n",
     "        #we always take the tokens shiftet to the right ([1:]), because we want to predict the next token for each token in the sequence\n",
     "        #i.e. predict the 3rd token given the first two, predict the 4th token given the first three, etc.\n",
@@ -860,13 +860,13 @@
     "    print(\"\\tTRAIN LOSS: \",total_loss / len(train_loader))\n",
     "\n",
     "    print(\"\\t\\ttesting...\")\n",
-    "    transformer_encoder.eval()\n",
+    "    transformer_decoder.eval()\n",
     "    total_loss = 0\n",
     "    with torch.no_grad():\n",
     "        for images, labels in tqdm(test_loader):\n",
     "            input = tokenise(images).to(DEVICE)\n",
     "            \n",
-    "            output = transformer_encoder(input)\n",
+    "            output = transformer_decoder(input)\n",
     "            target = torch.nn.functional.one_hot(input[:,1:], num_classes=NUM_TOKENS+2).float()\n",
     "            loss = loss_function(output, target).mean()\n",
     "            \n",
